--- a/mintlify/developing/10_cli.mdx
+++ b/mintlify/developing/10_cli.mdx
@@ -490,7 +490,7 @@ om1 env <action> [key] [value]
 - `list`: Show all OM1 environment variables
 - `get <key>`: Get specific variable value
 - `set <key> <value>`: Set variable in .env file
-- `generate`: Create .env.example template
+- `generate`: Create env.example template
 - `validate`: Check all required variables are set
 
 **Examples:**
@@ -694,7 +694,7 @@ Create a `.env` file in the project root:
 
 ```bash
 # Copy template
-cp .env.example .env
+cp env.example .env
 
 # Edit with your keys
 nano .env
